--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -118,22 +118,22 @@ jobs:
         with:
           name: build-publish
           path: _build
-      # Sync notebooks
-      - name: Prepare lecture-python-intro.notebooks sync
-        shell: bash -l {0}
-        run: |
-          mkdir -p _build/lecture-python-intro.notebooks
-          cp -a _notebook_repo/. _build/lecture-python-intro.notebooks
-          cp _build/jupyter/*.ipynb _build/lecture-python-intro.notebooks
-          ls -a _build/lecture-python-intro.notebooks
-      - name: Commit latest notebooks to lecture-python-intro.notebooks
-        uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.QUANTECON_SERVICES_PAT }}
-        with:
-          source-directory: '_build/lecture-python-intro.notebooks/'
-          destination-repository-username: 'QuantEcon'
-          destination-repository-name: 'lecture-python-intro.notebooks'
-          commit-message: 'auto publishing updates to notebooks'
-          destination-github-username: 'quantecon-services'
-          user-email: services@quantecon.org
+      # DISABLED FOR TESTING:       # Sync notebooks
+      # DISABLED FOR TESTING:       - name: Prepare lecture-python-intro.notebooks sync
+      # DISABLED FOR TESTING:         shell: bash -l {0}
+      # DISABLED FOR TESTING:         run: |
+      # DISABLED FOR TESTING:           mkdir -p _build/lecture-python-intro.notebooks
+      # DISABLED FOR TESTING:           cp -a _notebook_repo/. _build/lecture-python-intro.notebooks
+      # DISABLED FOR TESTING:           cp _build/jupyter/*.ipynb _build/lecture-python-intro.notebooks
+      # DISABLED FOR TESTING:           ls -a _build/lecture-python-intro.notebooks
+      # DISABLED FOR TESTING:       - name: Commit latest notebooks to lecture-python-intro.notebooks
+      # DISABLED FOR TESTING:         uses: cpina/github-action-push-to-another-repository@main
+      # DISABLED FOR TESTING:         env:
+      # DISABLED FOR TESTING:           API_TOKEN_GITHUB: ${{ secrets.QUANTECON_SERVICES_PAT }}
+      # DISABLED FOR TESTING:         with:
+      # DISABLED FOR TESTING:           source-directory: '_build/lecture-python-intro.notebooks/'
+      # DISABLED FOR TESTING:           destination-repository-username: 'QuantEcon'
+      # DISABLED FOR TESTING:           destination-repository-name: 'lecture-python-intro.notebooks'
+      # DISABLED FOR TESTING:           commit-message: 'auto publishing updates to notebooks'
+      # DISABLED FOR TESTING:           destination-github-username: 'quantecon-services'
+      # DISABLED FOR TESTING:           user-email: services@quantecon.org
