--- a/lectures/_config.yml
+++ b/lectures/_config.yml
@@ -1,4 +1,5 @@
-title: A First Course in Quantitative Economics with Python
+# ⚠️ TEST REPOSITORY
+title: "(TEST) A First Course in Quantitative Economics with Python"
 author: Thomas J. Sargent & John Stachurski
 logo: _static/qe-logo.png
 description: This website presents introductory lectures on computational economics, designed and written by Thomas J. Sargent and John Stachurski.
