Force fresh container pull to get latest image
- Add --pull always option to container config
- Ensures latest ghcr.io/quantecon/quantecon:latest is used
- Bypasses GitHub Actions runner cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/quantecon/quantecon:latest
+      options: --pull always  # Force fresh container pull
     steps:
       - name: Checkout
         uses: actions/checkout@v5
