chore: update to quantecon/actions v0.5.0
- Pin all action references to @v0.5.0 (from floating @v0)
- Switch container from quantecon:latest (~8GB) to quantecon-build:latest (~3GB)
  - Lectures install their own packages inline via pip
  - No environment-update.yml needed
- Update environment.yml to align with container packages:
  - anaconda 2025.06 → 2025.12
  - quantecon-book-theme 0.9.2 → 0.10.1
  - sphinx-tojupyter 0.3.1 → 0.4.0
  - sphinx-exercise 1.0.1 → 1.2.0
  - sphinx-reredirects 1.0.0 → 0.1.4
- Update _notebook_repo/environment.yml (Python 3.10 → 3.13, Anaconda 2023.03 → 2025.12)
- Remove legacy collab.yml.disabled workflow

Covers changes from v0.4.0 through v0.5.0:
- v0.5.0: environment-file → environment rename, new environment-update input
- v0.4.0: build-jupyter-cache and restore-jupyter-cache actions (already adopted)

--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -16,7 +16,7 @@ jobs:
   build-cache:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/quantecon/quantecon:latest
+      image: ghcr.io/quantecon/quantecon-build:latest
     
     permissions:
       contents: read
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Build and Cache
-        uses: quantecon/actions/build-jupyter-cache@v0
+        uses: quantecon/actions/build-jupyter-cache@v0.5.0
         with:
           builders: 'html'
           source-dir: 'lectures'
