--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/quantecon/quantecon:latest
+      image: ghcr.io/quantecon/quantecon-build:latest
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.page-url }}
@@ -28,14 +28,14 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Build PDF
-        uses: quantecon/actions/build-lectures@v0
+        uses: quantecon/actions/build-lectures@v0.5.0
         with:
           source-dir: 'lectures'
           builder: 'pdflatex'
           upload-failure-reports: true
       
       - name: Build Notebooks
-        uses: quantecon/actions/build-lectures@v0
+        uses: quantecon/actions/build-lectures@v0.5.0
         with:
           source-dir: 'lectures'
           builder: 'jupyter'
@@ -43,7 +43,7 @@ jobs:
       
       - name: Build HTML
         id: build
-        uses: quantecon/actions/build-lectures@v0
+        uses: quantecon/actions/build-lectures@v0.5.0
         with:
           source-dir: 'lectures'
           builder: 'html'
@@ -53,6 +53,6 @@ jobs:
       
       - name: Deploy to GitHub Pages
         id: deploy
-        uses: quantecon/actions/publish-gh-pages@v0
+        uses: quantecon/actions/publish-gh-pages@v0.5.0
         with:
           build-dir: ${{ steps.build.outputs.build-path }}
