feat: enable PR-scoped build caching in CI
Add save-cache: true to restore-jupyter-cache step so subsequent
pushes to the same PR restore the prior build and only re-execute
changed notebooks.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           cache-type: 'build'
           source-dir: 'lectures'
+          save-cache: 'true'
       
       - name: Build HTML
         id: build
