feat: build PDF and notebooks in CI preview (#35)
Add PDF and notebook builds before HTML in CI workflow so the
Netlify preview includes all asset types. Builds run sequentially
(PDF → notebooks → HTML) in a single job to reuse the container
and execution cache.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,28 @@ jobs:
           cache-type: 'build'
           source-dir: 'lectures'
       
+      - name: Build PDF
+        uses: quantecon/actions/build-lectures@v0.5.0
+        with:
+          source-dir: 'lectures'
+          builder: 'pdflatex'
+          upload-failure-reports: true
+      
+      - name: Build Notebooks
+        uses: quantecon/actions/build-lectures@v0.5.0
+        with:
+          source-dir: 'lectures'
+          builder: 'jupyter'
+          upload-failure-reports: true
+      
       - name: Build HTML
         id: build
         uses: quantecon/actions/build-lectures@v0
         with:
           source-dir: 'lectures'
           builder: 'html'
+          html-copy-pdf: true
+          html-copy-notebooks: true
           upload-failure-reports: true
       
       - name: Deploy to Netlify
